# bittorrent-client

./: .gitignore  package-lock.json  package.json
backend/: pyproject.toml  test.py
backend/scripts/: setup_libtorrent.py
backend/src/seaderr/: __main__.py  app.py
backend/src/seaderr/consumers/: __init__.py  broadcast.py
backend/src/seaderr/datastructures/: __init__.py
backend/src/seaderr/datastructures/dataclass/: __init__.py  events.py  torrent.py
backend/src/seaderr/enums/: synthetic_events.py
backend/src/seaderr/events/: connect.py  disconnect.py
backend/src/seaderr/handler/: __init__.py  websocket.py
backend/src/seaderr/managers/: broadcast_client_manager.py
backend/src/seaderr/routes/: add.py  add_file.py  add_magnet.py  broadcast.py  get_all.py  get_specific.py  pause.py  remove.py  resume.py
backend/src/seaderr/routes/bridge/: pick_folder.py
backend/src/seaderr/routes/libtorrent/: add_file.py  add_magnet.py  broadcast.py  get_all.py  pause.py  (+3 more)
backend/src/seaderr/singletons/: __init__.py  database.py  event_bus.py  libtorrent.py  logger.py  sio.py
backend/src/seaderr/stores/: expiring_store.py
backend/src/seaderr/utilities/: __init__.py  import_helper.py
daemon/: pyproject.toml  tes.py  test-2.py  test.py
daemon/scripts/: setup_libtorrent.py
daemon/src/seaderr/: __main__.py  app.py
daemon/src/seaderr/consumers/: broadcast.py
daemon/src/seaderr/decorators/: validate_payload.py
daemon/src/seaderr/enums/: __init__.py
daemon/src/seaderr/events/: connect.py  disconnect.py
daemon/src/seaderr/managers/: __init__.py
daemon/src/seaderr/serializers/: __init__.py  files.py  peers.py
daemon/src/seaderr/singletons/: database.py  event_bus.py  libtorrent.py  sio.py
daemon/src/seaderr/stores/: __init__.py  expiring_store.py
daemon/src/seaderr/timers/: wait_for.py
daemon/src/seaderr/utilities/: __init__.py
daemon/src/seedarr/: __main__.py  app.py
daemon/src/seedarr/consumers/: broadcast.py
daemon/src/seedarr/datastructures/: __init__.py
daemon/src/seedarr/decorators/: __init__.py  validate_payload.py
daemon/src/seedarr/envs/: __init__.py  folder_lock_directory.py
daemon/src/seedarr/events/: connect.py  disconnect.py
daemon/src/seedarr/managers/: __init__.py
daemon/src/seedarr/serializers/: magnet.py  peers.py
daemon/src/seedarr/singletons/: __init__.py  event_bus.py  folder_lock.py  libtorrent.py  logger.py
daemon/src/seedarr/timers/: __init__.py
daemon/src/seedarr/utilities/: __init__.py  import_helper.py
(+224 files in other folders)
