[project]
name = "seedarr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "anyio>=4.9.0",
    "click>=8.2.1",
    "colorama>=0.4.6",
    "cross-platform-folder-picker>=0.0.3",
    "filelock>=3.18.0",
    "msgpack>=1.1.1",
    "platformdirs>=4.3.8",
    "pydantic>=2.11.7",
    "python-socketio>=5.13.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
build = ["hatch>=1.14.1"]


[tool.setuptools.packages.find]
where = ["src"]


[project.scripts]
seedarr = "seedarr.__main__:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"] # E: pyflakes, F: pycodestyle, I: isort

[tool.ruff.lint.isort]
known-first-party = ["seedarr"]
combine-as-imports = true
